--- a/Src/RichillCapital.Texas.Desktop/MainWindow.xaml
+++ b/Src/RichillCapital.Texas.Desktop/MainWindow.xaml
@@ -4,9 +4,32 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:RichillCapital.Texas.Desktop"
+        d:DataContext="{d:DesignInstance local:MainViewModel, IsDesignTimeCreatable=False}"
         mc:Ignorable="d"
+        WindowStartupLocation="CenterScreen"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
+        <Grid.ColumnDefinitions>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="Auto"/>
+        </Grid.RowDefinitions>
 
+        <ToolBar Grid.Row="0">
+            <Button Content="Add Player" Command="{Binding OpenAddPlayerDialogCommand}"/>
+        </ToolBar>
+
+        <Grid Grid.Row="1">
+            <DataGrid Grid.Row="1" AutoGenerateColumns="False" IsReadOnly="True">
+                <DataGrid.Columns>
+                    <DataGridTextColumn Header="ID" Width="*"></DataGridTextColumn>
+                    <DataGridTextColumn Header="Name" Width="*"></DataGridTextColumn>
+                </DataGrid.Columns>
+            </DataGrid>
+        </Grid>
+
+        <StatusBar Grid.Row="2">Hi</StatusBar>
     </Grid>
 </Window>
