--- a/Src/RichillCapital.Texas.Desktop/MainWindow.xaml
+++ b/Src/RichillCapital.Texas.Desktop/MainWindow.xaml
@@ -32,7 +32,7 @@
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
             
-            <DataGrid Grid.Row="0" AutoGenerateColumns="False" IsReadOnly="True" ItemsSource="{Binding Players}">
+            <DataGrid Grid.Row="0" AutoGenerateColumns="False" IsReadOnly="True" ItemsSource="{Binding Players}" SelectedItem="{Binding SelectedPlayer}">
                 <DataGrid.Columns>
                     <DataGridTextColumn Header="ID" Width="Auto" Binding="{Binding Id}"/>
                     <DataGridTextColumn Header="名稱" Width="Auto" Binding="{Binding Name}"/>
